install/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taico-codex
  namespace: taico-codex
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - codex.taico.app
      secretName: taico-codex-tls
  rules:
    - host: codex.taico.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taico-codex
                port:
                  number: 80
